--- a/index.html
+++ b/index.html
@@ -6,74 +6,74 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студія</title>
     <!--Styles-->
-    <link rel="stylesheet" href="css/styles.css">
+    <link href="css/styles.css" rel="stylesheet">
   </head>
   <body>
     <!--header-->
-    <header>
-      <nav>
-        <a href="index.html">WebStudio</a>
-        <ul>
-          <li><a href="/">Студія</a></li>
-          <li><a href="/">Портфоліо</a></li>
-          <li><a href="/">Контакти</a></li>
+    <header class="header">
+      <nav class="header-nav">
+        <a class="logo" href="index.html">WebStudio</a>
+        <ul class="header-nav-list">
+          <li class="header-nav-list-item"><a href="/">Студія</a></li>
+          <li class="header-nav-list-item"><a href="/">Портфоліо</a></li>
+          <li class="header-nav-list-item"><a href="/">Контакти</a></li>
         </ul>
       </nav>
-        <ul>
-          <li><a href="mailto:">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="header-nav-list-contact">
+          <li class="header-nav-list-contacti-item"><a class="link" href="mailto:">info@devstudio.com</a></li>
+          <li class="header-nav-list-contacti-item"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
       <!--btn-->
-      <section>
-        <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button type="button">Замовити послугу</button>
+      <section class="section-btn">
+        <h1 class="section-title">Ефективні рішення для вашого бізнесу</h1>
+        <button class="btn" type="button">Замовити послугу</button>
       </section>
       <!--about -->
-      <section>
-        <h2 hidden>Опис</h2>
-        <ul>
-          <li>
-            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+      <section class="description">
+        <h2 class="titlle" hidden>Опис</h2>
+        <ul class="description-list">
+          <li class="description-list-item">
+            <h3 class="description-tittle">УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p class="description-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
           </li>
-          <li>
-            <h3>ПУНКТУАЛЬНІСТЬ</h3>
-            <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+          <li class="description-list-item">
+            <h3 class="description-tittle">ПУНКТУАЛЬНІСТЬ</h3>
+            <p class="description-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
           </li>
-          <li>
-            <h3>ПЛАНУВАННЯ</h3>
-            <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+          <li class="description-list-item">
+            <h3 class="description-tittle">ПЛАНУВАННЯ</h3>
+            <p class="description-text">Так само консультація з широким активом значною мірою зумовлює.</p>
           </li>
-          <li>
-            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+          <li class="description-list-item">
+            <h3 class="description-tittle">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p class="description-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
           </li>
         </ul>
       </section>
       <!--Блок послуг-->
-      <section>
-        <h2>Чим ми займаємося</h2>
-        <ul>
-          <li>
-            <img
+      <section class="about">
+        <h2 class="tittle">Чим ми займаємося</h2>
+        <ul class="about-list">
+          <li class="about-list-item">
+            <img class="about-list-item-img"
               src="../goit-markup-hw-01/images/tablet_computer.jpg"
               alt="Планшет з клавіатурою"
               width="370"
               height="294"
             />
           </li>
-          <li>
-            <img
+          <li class="about-list-item">
+            <img class="about-list-item-img"
               src="../goit-markup-hw-01/images/mobile.jpg"
               alt="телефон на фоны ноутбука"
               width="370"
               height="294"
             />
           </li>
-          <li>
-            <img
+          <li class="about-list-item">
+            <img class="about-list-item-img"
               src="../goit-markup-hw-01/images/tablet.jpg"
               alt="планшет"
               width="370"
@@ -83,64 +83,60 @@
         </ul>
       </section>
       <!--our team-->
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
-          <li>
-            <img
+      <section class="team">
+        <h2 class="title">Наша команда</h2>
+        <ul class="team-list">
+          <li class="team-list-item">
+            <img class="team-list-item-img"
               src="../goit-markup-hw-01/images/igorDem.jpg"
               alt="фото Ігора Дем'яненко"
               width="270"
-              height="260"
-            />
-            <h3>Ігор Дем'яненко</h3>
-            <p lang="en">Product Designer</p>
+              height="260"/>
+            <h3 class="name">Ігор Дем'яненко</h3>
+            <p class="profession" lang="en">Product Designer</p>
           </li>
-          <li>
-            <img
+          <li class="team-list-item">
+            <img class="team-list-item-img"
               src="../goit-markup-hw-01/images/Olga_rep.jpg"
               alt="фото Ольги Рєпіної"
               width="270"
-              height="260"
-            />
-            <h3>Ольга Рєпіна</h3>
-            <p lang="en">Frontend Developer</p>
+              height="260" />
+            <h3 class="name">Ольга Рєпіна</h3>
+            <p class="profession" lang="en">Frontend Developer</p>
           </li>
-          <li>
-            <img
+          <li class="team-list-item">
+            <img class="team-list-item-img"
               src="../goit-markup-hw-01/images/Nikolay_tar.jpg"
               alt="фото Миколи Тарасова"
               width="270"
-              height="260"
-            />
-            <h3>Микола Тарасов</h3>
-            <p lang="en">Marketing</p>
+              height="260" />
+            <h3 class="name">Микола Тарасов</h3>
+            <p class="profession" lang="en">Marketing</p>
           </li>
-          <li>
-            <img
+          <li class="team-list-item">
+            <img class="team-list-item-img"
               src="../goit-markup-hw-01/images/Mihaylo_Yerm.jpg"
               alt="фото михайла Єрмакова"
               width="270"
-              height="260"
-            />
-            <h3>Михайло Єрмаков</h3>
-            <p lang="en">UI Designer</p>
+              height="260"/>
+            <h3 class="name">Михайло Єрмаков</h3>
+            <p class="profession" lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <!--Футер-->
-    <footer>
-      <div>
-        <a href="index.html">WebStudio</a>
-            <address title="адрес студії">
-            <p>м. Київ, пр-т Лесі Українки, 26</p>
-          <ul>
-          <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+    <!--contact info-->
+    <footer class="footer">
+      <div class="footer-bloc">
+        <a class="logo" href="index.html">WebStudio</a>
+            <address class="address-maps" title="адрес студії">
+            <p class="address-maps-text">м. Київ, пр-т Лесі Українки, 26</p>
+          <ul class="address-list">
+          <li class="address-list-item">
+            <a class="address-list-item-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <li class="address-list-item">
+            <a class="address-list-item-link" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
