--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Портфоліо</title>
-    <!--Text styles-->
+    <!--Front styles-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <!--Styles-->
     <link rel="stylesheet" href="css/styles.css">
   </head>
@@ -13,14 +16,14 @@
     <!--header-->
     <header class="header">
       <nav class="header-nav">
-        <a class="logo" href="index.html">WebStudio</a>
-        <ul class="header-nav-list">
-          <li class="header-nav-list-item"><a href="/">Студія</a></li>
-          <li class="header-nav-list-item"><a href="/">Портфоліо</a></li>
-          <li class="header-nav-list-item"><a href="/">Контакти</a></li>
+        <a class="logo" href="index.html"><span style="color:#2196F3;">Web</span>Studio</a>
+        <ul class="list">
+          <li class="header-nav-list-item"><a class="link" href="./index.html">Студія</a></li>
+          <li class="header-nav-list-item"><a class="link" href="./portfolio.html">Портфоліо</a></li>
+          <li class="header-nav-list-item"><a class="link" href="">Контакти</a></li>
         </ul>
       </nav>
-        <ul class="header-nav-list-contact">
+        <ul class="list">
           <li class="header-nav-list-contacti-item"><a class="link" href="mailto:">info@devstudio.com</a></li>
           <li class="header-nav-list-contacti-item"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
@@ -28,14 +31,14 @@
     <main>
       <!--Porfolio list-->
       <section class="porfolio">
-        <ul class="porfolio-list">
+        <ul class="list">
           <li class="porfolio-list-item"><a href="" class="link">Усі</a></li>
           <li class="porfolio-list-item"><a href="" class="link">Веб-сайти</a></li>
           <li class="porfolio-list-item"><a href="" class="link">Додатки</a></li>
           <li class="porfolio-list-item"><a href="" class="link">Дизайн</a></li>
           <li class="porfolio-list-item"><a href="" class="link">Маркетинг</a></li>
         </ul>
-        <ul class="portfolio-list-img">
+        <ul class="list">
           <li class="portfolio-list-img-item">
             <img class="porfolio-img"
               src="./images/portfolio_img/tehnokryak.jpg"
@@ -123,15 +126,15 @@
     <!--contact info-->
     <footer class="footer">
       <div class="footer-bloc">
-        <a class="logo" href="index.html">WebStudio</a>
+        <a class="logo" href="index.html"><span style="color:#2196F3;">Web</span>Studio</a>
             <address class="address-maps" title="адрес студії">
             <p class="address-maps-text">м. Київ, пр-т Лесі Українки, 26</p>
-          <ul class="address-list">
+          <ul class="list">
           <li class="address-list-item">
-            <a class="address-list-item-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li class="address-list-item">
-            <a class="address-list-item-link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
