--- a/index.html
+++ b/index.html
@@ -5,21 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студія</title>
-    <!--Styles-->
+    <!--Front style-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+  <!--Styles-->
     <link href="css/styles.css" rel="stylesheet">
   </head>
   <body>
     <!--header-->
     <header class="header">
       <nav class="header-nav">
-        <a class="logo" href="index.html">WebStudio</a>
-        <ul class="header-nav-list">
-          <li class="header-nav-list-item"><a href="/">Студія</a></li>
-          <li class="header-nav-list-item"><a href="/">Портфоліо</a></li>
-          <li class="header-nav-list-item"><a href="/">Контакти</a></li>
+        <a class="logo" href="index.html"><span style="color:#2196F3;">Web</span>Studio</a>
+        <ul class="list">
+          <li class="header-nav-list-item"><a class="link" href="./index.html">Студія</a></li>
+          <li class="header-nav-list-item"><a class="link" href="./portfolio.html">Портфоліо</a></li>
+          <li class="header-nav-list-item"><a class="link" href="">Контакти</a></li>
         </ul>
       </nav>
-        <ul class="header-nav-list-contact">
+        <ul class="list">
           <li class="header-nav-list-contacti-item"><a class="link" href="mailto:">info@devstudio.com</a></li>
           <li class="header-nav-list-contacti-item"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
@@ -33,10 +37,10 @@
       <!--about -->
       <section class="description">
         <h2 class="titlle" hidden>Опис</h2>
-        <ul class="description-list">
+        <ul class="list">
           <li class="description-list-item">
             <h3 class="description-tittle">УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p class="description-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+            <p class="description-text" style="text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
           </li>
           <li class="description-list-item">
             <h3 class="description-tittle">ПУНКТУАЛЬНІСТЬ</h3>
@@ -55,7 +59,7 @@
       <!--Блок послуг-->
       <section class="about">
         <h2 class="tittle">Чим ми займаємося</h2>
-        <ul class="about-list">
+        <ul class="list">
           <li class="about-list-item">
             <img class="about-list-item-img"
               src="../goit-markup-hw-01/images/tablet_computer.jpg"
@@ -84,8 +88,8 @@
       </section>
       <!--our team-->
       <section class="team">
-        <h2 class="title">Наша команда</h2>
-        <ul class="team-list">
+        <h2 class="tittle">Наша команда</h2>
+        <ul class="list">
           <li class="team-list-item">
             <img class="team-list-item-img"
               src="../goit-markup-hw-01/images/igorDem.jpg"
@@ -128,15 +132,15 @@
     <!--contact info-->
     <footer class="footer">
       <div class="footer-bloc">
-        <a class="logo" href="index.html">WebStudio</a>
+        <a class="logo" href="index.html"><span style="color:#2196F3;">Web</span>Studio</a>
             <address class="address-maps" title="адрес студії">
             <p class="address-maps-text">м. Київ, пр-т Лесі Українки, 26</p>
-          <ul class="address-list">
+          <ul class="list">
           <li class="address-list-item">
-            <a class="address-list-item-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li class="address-list-item">
-            <a class="address-list-item-link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
