--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <!--header-->
     <header class="header">
       <nav class="header-nav">
-        <a class="logo" href="index.html"><span style="color:#2196F3;">Web</span>Studio</a>
+        <a class="logo" href="index.html"><span class ="logo-cl">Web</span>Studio</a>
         <ul class="list">
-          <li class="header-nav-list-item"><a class="link" href="./index.html">Студія</a></li>
+          <li class="header-nav-list-item active-page"><a class="link" href="./index.html" >Студія</a></li>
           <li class="header-nav-list-item"><a class="link" href="./portfolio.html">Портфоліо</a></li>
-          <li class="header-nav-list-item"><a class="link" href="">Контакти</a></li>
+          <li class="header-nav-list-item"><a class="link" href="" >Контакти</a></li>
         </ul>
       </nav>
         <ul class="list">
@@ -40,7 +40,7 @@
         <ul class="list">
           <li class="description-list-item">
             <h3 class="description-tittle">УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p class="description-text" style="text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+            <p class="description-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
           </li>
           <li class="description-list-item">
             <h3 class="description-tittle">ПУНКТУАЛЬНІСТЬ</h3>
@@ -132,7 +132,7 @@
     <!--contact info-->
     <footer class="footer">
       <div class="footer-bloc">
-        <a class="logo" href="index.html"><span style="color:#2196F3;">Web</span>Studio</a>
+        <a class="logo" href="index.html"><span class ="logo-cl">Web</span>Studio</a>
             <address class="address-maps" title="адрес студії">
             <p class="address-maps-text">м. Київ, пр-т Лесі Українки, 26</p>
           <ul class="list">
