--- a/portfolio.html
+++ b/portfolio.html
@@ -16,10 +16,10 @@
     <!--header-->
     <header class="header">
       <nav class="header-nav">
-        <a class="logo" href="index.html"><span style="color:#2196F3;">Web</span>Studio</a>
+        <a class="logo" href="index.html"><span class ="logo-cl">Web</span>Studio</a>
         <ul class="list">
           <li class="header-nav-list-item"><a class="link" href="./index.html">Студія</a></li>
-          <li class="header-nav-list-item"><a class="link" href="./portfolio.html">Портфоліо</a></li>
+          <li class="header-nav-list-item active-page"><a class="link" href="./portfolio.html">Портфоліо</a></li>
           <li class="header-nav-list-item"><a class="link" href="">Контакти</a></li>
         </ul>
       </nav>
@@ -31,13 +31,11 @@
     <main>
       <!--Porfolio list-->
       <section class="porfolio">
-        <ul class="list">
-          <li class="porfolio-list-item"><a href="" class="link">Усі</a></li>
-          <li class="porfolio-list-item"><a href="" class="link">Веб-сайти</a></li>
-          <li class="porfolio-list-item"><a href="" class="link">Додатки</a></li>
-          <li class="porfolio-list-item"><a href="" class="link">Дизайн</a></li>
-          <li class="porfolio-list-item"><a href="" class="link">Маркетинг</a></li>
-        </ul>
+          <button class="porfolio-btn" type="button">Усі</button>
+          <button class="porfolio-btn" type="button">Веб-сайти</button>
+          <button class="porfolio-btn" type="button">Додатки</button>
+          <button class="porfolio-btn" type="button">Дизайн</button>
+          <button class="porfolio-btn" type="button">Маркетинг</button>
         <ul class="list">
           <li class="portfolio-list-img-item">
             <img class="porfolio-img"
@@ -126,7 +124,7 @@
     <!--contact info-->
     <footer class="footer">
       <div class="footer-bloc">
-        <a class="logo" href="index.html"><span style="color:#2196F3;">Web</span>Studio</a>
+        <a class="logo" href="index.html"><span class ="logo-cl">Web</span>Studio</a>
             <address class="address-maps" title="адрес студії">
             <p class="address-maps-text">м. Київ, пр-т Лесі Українки, 26</p>
           <ul class="list">
